--- a/src/index.html
+++ b/src/index.html
@@ -3,40 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Grid.JS - Dynamic User Data Table</title>
   </head>
   <body>
     <div class="flex flex-col h-screen">
       <header class="bg-white pb-2">
         <img
-          class="mx-auto"
-          src="./img/logo_carrefour_horizontal.png"
-          alt="Logo Carrefour Horizontal"
+          class="my-2 object-scale-down h-16 w-full"
+          src="./img/gridjs.png"
+          alt="Logo Grid.JS"
         />
-        <h1 class="font-sans text-xl font-medium text-gray-800 text-center">
-          Conoc&eacute; el horario de nuestras sucursales
-        </h1>
       </header>
-      <main class="bg-blue-200 flex-1 overflow-y-auto">
+      <main class="bg-gray-300 flex-1 overflow-y-auto px-2">
         <div id="wrapper" class="container mx-auto"></div>
       </main>
-      <footer class="bg-white">
-        <div class="container flex items-center mx-auto">
-          <div class="w-1/2 p-2">
-            <h5 class="font-sans text-xl font-medium text-gray-800">
-              Contamos con vos.<br />
-              Contá con Carrefour.
-            </h5>
-          </div>
-          <div class="w-1/2 p-2">
-            <img
-              class="float-right"
-              src="./img/logo_carrefour_horizontal.png"
-              alt="Logo Carrefour Horizontal"
-            />
-          </div>
-        </div>
-      </footer>
     </div>
   </body>
 </html>
